[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/prince.png" type="Texture" id=1]
[ext_resource path="res://source/Floor.tscn" type="PackedScene" id=2]
[ext_resource path="res://source/Footer.tscn" type="PackedScene" id=3]
[ext_resource path="res://source/Header.tscn" type="PackedScene" id=4]
[ext_resource path="res://source/button-normal.tres" type="StyleBox" id=5]
[ext_resource path="res://source/Princess.gd" type="Script" id=6]
[ext_resource path="res://assets/princess.png" type="Texture" id=7]
[ext_resource path="res://source/Success.tscn" type="PackedScene" id=8]
[ext_resource path="res://source/Instructions.tscn" type="PackedScene" id=9]
[ext_resource path="res://assets/font1.ttf" type="DynamicFontData" id=13]

[sub_resource type="DynamicFont" id=1]
size = 12
font_data = ExtResource( 13 )

[sub_resource type="DynamicFont" id=2]
size = 24
extra_spacing_top = 5
extra_spacing_bottom = 5
font_data = ExtResource( 13 )

[node name="Princess" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Header" parent="." instance=ExtResource( 4 )]
title = "PRINCESS"

[node name="Footer" parent="." instance=ExtResource( 3 )]
credits_link = "https://www.youtube.com/watch?v=nv0Onj3wXCE"

[node name="Body" type="Control" parent="."]
anchor_top = 0.15
anchor_right = 1.0
anchor_bottom = 0.85
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="Body"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.964706, 0.968627, 0.921569, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Center" type="Control" parent="Body"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_top = 20.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PrinceX" type="Node2D" parent="Body/Center"]
position = Vector2( -220, 280 )
scale = Vector2( 0.18, 0.18 )

[node name="Prince" type="Sprite" parent="Body/Center"]
position = Vector2( -120, 280 )
scale = Vector2( 0.18, 0.18 )
texture = ExtResource( 1 )

[node name="GhostPrince" type="Sprite" parent="Body/Center"]
visible = false
modulate = Color( 1, 1, 1, 0.290196 )
position = Vector2( -120, 280 )
scale = Vector2( 0.18, 0.18 )
texture = ExtResource( 1 )

[node name="PrincessX" type="Node2D" parent="Body/Center"]
position = Vector2( 80, 280 )
scale = Vector2( 0.1, 0.1 )

[node name="Princess" type="Sprite" parent="Body/Center"]
visible = false
position = Vector2( 0, 280 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 7 )

[node name="Floors" type="Node2D" parent="Body/Center"]
position = Vector2( -20, -80 )
__meta__ = {
"_edit_group_": true
}

[node name="Floor1" parent="Body/Center/Floors" instance=ExtResource( 2 )]
position = Vector2( 0, 280 )

[node name="Floor2" parent="Body/Center/Floors" instance=ExtResource( 2 )]
position = Vector2( 0, 220 )

[node name="Floor3" parent="Body/Center/Floors" instance=ExtResource( 2 )]
position = Vector2( 0, 160 )

[node name="Floor4" parent="Body/Center/Floors" instance=ExtResource( 2 )]
position = Vector2( 0, 100 )

[node name="Floor5" parent="Body/Center/Floors" instance=ExtResource( 2 )]
position = Vector2( 0, 40 )

[node name="Floor6" parent="Body/Center/Floors" instance=ExtResource( 2 )]
position = Vector2( 0, -20 )

[node name="Floor7" parent="Body/Center/Floors" instance=ExtResource( 2 )]
position = Vector2( 0, -80 )

[node name="Floor8" parent="Body/Center/Floors" instance=ExtResource( 2 )]
position = Vector2( 0, -140 )

[node name="Floor9" parent="Body/Center/Floors" instance=ExtResource( 2 )]
position = Vector2( 0, -200 )

[node name="Show" type="Button" parent="Body/Center"]
margin_left = -20.0
margin_top = 260.0
margin_right = 280.0
margin_bottom = 300.0
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = ExtResource( 5 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 5 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.101961, 0.0352941, 0.0509804, 1 )
custom_colors/font_color_hover = Color( 0.101961, 0.0352941, 0.0509804, 1 )
custom_colors/font_color_pressed = Color( 0.101961, 0.0352941, 0.0509804, 1 )
text = "I don't believe you!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GhostPrincess" type="Sprite" parent="Body/Center"]
visible = false
modulate = Color( 1, 1, 1, 0.290196 )
position = Vector2( 2, 280 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 7 )

[node name="Night" type="Label" parent="Body/Center"]
margin_left = 80.0
margin_top = -340.0
margin_right = 260.0
margin_bottom = -240.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.101961, 0.0352941, 0.0509804, 1 )
text = "NIGHT
#1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Success" parent="Body/Center" instance=ExtResource( 8 )]

[node name="Instructions" parent="Body/Center" instance=ExtResource( 9 )]
visible = false
z_index = 2
instruction_text = "The princess is sleeping somewhere in this tower. The prince would like to find her!

Each night the prince opens one door, hoping to find the princess. If he fails, the princess will move to another room for the next night.

The princess will ALWAYS move, either ONE floor UP, or DOWN.

Can you help the prince find his princess? How many nights will it take you?"

[node name="Tween" type="Tween" parent="."]
[connection signal="instructions_pressed" from="Footer" to="." method="_on_Footer_instructions_pressed"]
[connection signal="pressed" from="Body/Center/Floors/Floor1" to="." method="_on_Floor_pressed"]
[connection signal="pressed" from="Body/Center/Floors/Floor2" to="." method="_on_Floor_pressed"]
[connection signal="pressed" from="Body/Center/Floors/Floor3" to="." method="_on_Floor_pressed"]
[connection signal="pressed" from="Body/Center/Floors/Floor4" to="." method="_on_Floor_pressed"]
[connection signal="pressed" from="Body/Center/Floors/Floor5" to="." method="_on_Floor_pressed"]
[connection signal="pressed" from="Body/Center/Floors/Floor6" to="." method="_on_Floor_pressed"]
[connection signal="pressed" from="Body/Center/Floors/Floor7" to="." method="_on_Floor_pressed"]
[connection signal="pressed" from="Body/Center/Floors/Floor8" to="." method="_on_Floor_pressed"]
[connection signal="pressed" from="Body/Center/Floors/Floor9" to="." method="_on_Floor_pressed"]
[connection signal="pressed" from="Body/Center/Show" to="." method="_on_Show_pressed"]
